--- a/packages/obsidian/src/player/component/styles/controls.less
+++ b/packages/obsidian/src/player/component/styles/controls.less
@@ -15,7 +15,7 @@
   }
   &:not(:hover):not(.mx__paused) {
     .mx__controls-warp {
-      transform: translateY(62%);
+      transform: translateY(50px);
       .mx__media-progress {
         .MuiSlider-thumb {
           opacity: 0;
